--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="fr">
   <head>
     <title>EPITA 2023 - SIGL</title>
+    <h1>Jocelyn's Game</h1>
     <style>
       body {
-        background: #000000;
+        background: #4879d9;
       }
 
       #container {
@@ -14,6 +15,7 @@
       }
 
       #player1 {
+        color: white;
         margin: auto;
         text-align: center;
       }
@@ -21,14 +23,19 @@
       .life {
         color: white;
       }
+
+      .win-message {
+        color: yellow;
+      }
     </style>
   </head>
 
   <body>
     <div id="container"></div>
     <div id="player1">
-      <strong>Joueur 1</strong>
+      <strong>Joueur 1 :</strong>
       <span class="life">3</span> vies
+      <br />
     </div>
   </body>
 
