--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
       }
 
       .win-message {
+        font-size: 16px;
         color: yellow;
+      }
+
+      .inv {
+        font-size: 16px;
+        color: red;
+        font-weight: bold;
       }
     </style>
   </head>
